--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5576,7 +5576,7 @@ h2 {
     -webkit-transform: scaleY(1);
     transform: scaleY(1); }
 
-.navigation__items {
+.navigation-itens {
   overflow: scroll;
   position: fixed;
   top: 4.375rem;
@@ -5605,8 +5605,15 @@ h2 {
   -webkit-transform: translateY(-6.25rem);
   transform: translateY(-6.25rem); }
 
-.nav-expanded .navigation__items {
+.navigation-itens a {
+  text-transform: capitalize;
+  font-size: 2.75rem; }
+
+.nav-expanded .navigation-itens {
   display: block;
   opacity: 1;
   -webkit-transform: translateY(0);
   transform: translateY(0); }
+
+.nav-animation .navigation-itens {
+  display: block; }
