--- a/scss/custom/_menu-mobile.scss
+++ b/scss/custom/_menu-mobile.scss
@@ -173,3 +173,12 @@ $scrollhide-nav-transition-speed: 0.5s;
 .nav-animation .navigation-itens {
     display: block;
 }
+
+.flex-col {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    display: flex;
+}
