--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5423,7 +5423,7 @@ h2 {
   stroke: #3adb76;
   stroke-dasharray: 1, 200;
   stroke-dashoffset: 0;
-  animation: dash 1.5s ease-in-out forwards, color 6s ease-in-out infinite;
+  animation: dash 1.5s ease-in-out forwards, color 6s ease-in-out infinite;
   stroke-linecap: round; }
 
 @keyframes dash {
@@ -5461,6 +5461,10 @@ h2 {
   width: 75%;
   height: 400px;
   margin-right: 10px; }
+
+.flickity-button-icon {
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg); }
 
 .scrollhide-nav {
   position: fixed;
