--- a/scss/custom/_carousel.scss
+++ b/scss/custom/_carousel.scss
@@ -3,3 +3,8 @@
     height: 400px;
     margin-right: 10px;
 }
+
+.flickity-button-icon {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+  }
