--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -63,6 +63,10 @@ h2 {
     }
 }
 
+.grey-content {
+    background-color: $light-gray;
+}
+
 .pink-content {
     background-color: $secondary-color;
     background-position: top;
