--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -30,8 +30,8 @@ h2 {
     letter-spacing: 5px;
 }
 
-.blue-content {
-    padding: 120px 0px 190px 0;
+.red-content {
+    padding: 90px 0px 190px 0;
     background: url(/images/sparkles.gif);
     background-position: top;
     background-repeat: repeat;
