--- a/scss/custom/_carousel.scss
+++ b/scss/custom/_carousel.scss
@@ -1,9 +1,3 @@
-.carousel-cell {
-    width: 75%;
-    max-height: 400px;
-    margin-right: 10px;
-}
-
 .flickity-button {
     background: none;
 }
@@ -25,4 +19,31 @@
 
 .flickity-prev-next-button.next {
     right: 45%;
+}
+
+.main-carousel-cell, 
+    .carousel-cell {
+        max-height: 400px;
+        margin-right: 10px; 
+    }
+
+@include breakpoint(small only) {
+    .main-carousel-cell, 
+    .carousel-cell {
+        width: 75%;
+    }
+}
+
+@include breakpoint(medium only) {
+    .main-carousel-cell, 
+    .carousel-cell {
+        width: calc( ( 100% - 20px ) / 2);
+    }
+}
+
+@include breakpoint(large) {
+    .main-carousel-cell, 
+    .carousel-cell {
+        width: calc( ( 100% - 20px ) / 3);
+    }
 }
