--- a/scss/custom/_carousel.scss
+++ b/scss/custom/_carousel.scss
@@ -33,7 +33,7 @@
     margin-right: 10px; 
     p, span,
     p:hover, span:hover {
-        color: $primary-color;
+        color: $black;
     }
 }
 
