--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5482,7 +5482,7 @@ h2 {
   margin-right: 10px; }
   .carousel-cell p, .carousel-cell span,
   .carousel-cell p:hover, .carousel-cell span:hover {
-    color: #A62E3C; }
+    color: #0a0a0a; }
 
 @media screen and (max-width: 39.9375em) {
   .main-carousel-cell,
