--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5141,68 +5141,46 @@ html.is-reveal-open body {
 .button {
   text-transform: uppercase; }
 
+.line {
+  border-top: 1px solid #cacaca; }
+
 .footer {
   -webkit-backface-visibility: hidden;
   -webkit-perspective: 1000;
   padding: 1rem 0;
   align-items: center;
-  background: url(/images/sparkles.gif);
   background-position: top;
   background-repeat: repeat;
-  background-color: #ffae00;
-  color: #fff;
-  padding-top: 40px;
-  padding-bottom: 60px; }
+  background-color: #fff;
+  color: #0a0a0a;
+  padding: 40px 0px 60px 0; }
   .footer h6 {
     text-transform: uppercase;
     font-weight: 700;
     color: #A62E3C; }
-  .footer p {
-    margin-bottom: 0; }
-  .footer .info {
-    padding-top: 45px; }
-  .footer a {
-    color: #fefefe; }
-  .footer a:hover {
-    text-decoration: underline; }
 
-.facebook {
-  position: relative;
-  top: 6px;
-  left: 5px;
-  background-color: rgba(0, 0, 0, 0.1); }
-  .facebook img {
-    position: absolute;
-    top: 7px;
-    left: 10px; }
-  .facebook:hover {
-    background-color: #3b5998; }
+.footer__social .icon-facebook {
+  width: 1.125rem;
+  height: 1.4375rem; }
 
-.email {
-  position: relative;
-  top: 6px;
-  left: 15px;
-  background-color: rgba(0, 0, 0, 0.1); }
-  .email img {
-    position: absolute;
-    top: 8px;
-    left: 3px; }
-  .email:hover {
-    background-color: #00b9c1; }
+.footer__social .icon {
+  width: 1.375rem;
+  height: 1.375rem;
+  fill: #8e8e8e; }
 
-.social-icon {
-  height: 30px;
-  width: 30px;
-  -webkit-transition-duration: 0.5s;
-  -webkit-transform: rotate(45deg);
-  display: inline-block;
-  padding-left: 0px;
-  vertical-align: top;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-  .social-icon img {
-    -webkit-transform: rotate(-45deg); }
+.icon svg {
+  width: inherit;
+  height: inherit;
+  fill: inherit;
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: .35s;
+  transition-duration: .35s;
+  -webkit-transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955); }
+
+.footer__social__link:hover .icon {
+  fill: #A62E3C; }
 
 nav {
   width: 100%;
@@ -5313,7 +5291,7 @@ h2 {
   color: #fff; }
 
 .white-content {
-  padding: 120px 0px 190px 0; }
+  padding: 120px 0px 40px 0; }
   .white-content h1 {
     margin-bottom: 10rem;
     color: #ffae00;
