--- a/scss/custom/_footer.scss
+++ b/scss/custom/_footer.scss
@@ -19,15 +19,20 @@
     }
 }
 
+.footer__social .icon {
+    width: 1.375rem;
+    height: 1.375rem;
+    fill: #8e8e8e;
+}
+
 .footer__social .icon-facebook {
     width: 1.125rem;
     height: 1.4375rem;
 }
 
-.footer__social .icon {
-    width: 1.375rem;
+.footer__social .icon-instagram {
+    width: 1.175rem;
     height: 1.375rem;
-    fill: #8e8e8e;
 }
 
 .icon svg {
