--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5159,14 +5159,18 @@ html.is-reveal-open body {
     font-weight: 700;
     color: #A62E3C; }
 
-.footer__social .icon-facebook {
-  width: 1.125rem;
-  height: 1.4375rem; }
-
 .footer__social .icon {
   width: 1.375rem;
   height: 1.375rem;
   fill: #8e8e8e; }
+
+.footer__social .icon-facebook {
+  width: 1.125rem;
+  height: 1.4375rem; }
+
+.footer__social .icon-instagram {
+  width: 1.175rem;
+  height: 1.375rem; }
 
 .icon svg {
   width: inherit;
@@ -5398,7 +5402,7 @@ h2 {
   stroke: #3adb76;
   stroke-dasharray: 1, 200;
   stroke-dashoffset: 0;
-  animation: dash 1.5s ease-in-out forwards, color 6s ease-in-out infinite;
+  animation: dash 1.5s ease-in-out forwards, color 6s ease-in-out infinite;
   stroke-linecap: round; }
 
 @keyframes dash {
