--- a/scss/custom/_responsive.scss
+++ b/scss/custom/_responsive.scss
@@ -4,8 +4,7 @@
         padding-bottom: 20px;
     }
     .footer {
-        padding-bottom: 20px;
-        padding-top: 20px;
+        text-align: center;
     }
     .responsive-bottom-space {
         padding-bottom: 50px;
