--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5158,6 +5158,10 @@ html.is-reveal-open body {
     text-transform: uppercase;
     font-weight: 700;
     color: #A62E3C; }
+  .footer a {
+    color: #0a0a0a; }
+  .footer a:hover {
+    color: #A62E3C; }
 
 .footer__social .icon {
   width: 1.375rem;
@@ -5373,8 +5377,7 @@ h2 {
     top: 0;
     padding-bottom: 20px; }
   .footer {
-    padding-bottom: 20px;
-    padding-top: 20px; }
+    text-align: center; }
   .responsive-bottom-space {
     padding-bottom: 50px; }
   .footer .info {
@@ -5402,7 +5405,7 @@ h2 {
   stroke: #3adb76;
   stroke-dasharray: 1, 200;
   stroke-dashoffset: 0;
-  animation: dash 1.5s ease-in-out forwards, color 6s ease-in-out infinite;
+  animation: dash 1.5s ease-in-out forwards, color 6s ease-in-out infinite;
   stroke-linecap: round; }
 
 @keyframes dash {
