--- a/scss/custom/_footer.scss
+++ b/scss/custom/_footer.scss
@@ -23,6 +23,9 @@
     a:hover {
         color: $primary-color;
     }
+    .menu-text {
+     text-transform: uppercase;
+    }
 }
 
 .footer__social .icon {
