--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5162,6 +5162,8 @@ html.is-reveal-open body {
     color: #0a0a0a; }
   .footer a:hover {
     color: #A62E3C; }
+  .footer .menu-text {
+    text-transform: uppercase; }
 
 .footer__social .icon {
   width: 1.375rem;
@@ -5405,7 +5407,7 @@ h2 {
   stroke: #3adb76;
   stroke-dasharray: 1, 200;
   stroke-dashoffset: 0;
-  animation: dash 1.5s ease-in-out forwards, color 6s ease-in-out infinite;
+  animation: dash 1.5s ease-in-out forwards, color 6s ease-in-out infinite;
   stroke-linecap: round; }
 
 @keyframes dash {
