--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5165,16 +5165,16 @@ html.is-reveal-open body {
   .footer .menu-text {
     text-transform: uppercase; }
 
-.footer__social .icon {
+.footer-social .icon {
   width: 1.375rem;
   height: 1.375rem;
   fill: #8e8e8e; }
 
-.footer__social .icon-facebook {
+.footer-social .icon-facebook {
   width: 1.125rem;
   height: 1.4375rem; }
 
-.footer__social .icon-instagram {
+.footer-social .icon-instagram {
   width: 1.175rem;
   height: 1.375rem; }
 
@@ -5189,7 +5189,7 @@ html.is-reveal-open body {
   -webkit-transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
   transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955); }
 
-.footer__social__link:hover .icon {
+.footer-social-link:hover .icon {
   fill: #A62E3C; }
 
 nav {
@@ -5380,10 +5380,10 @@ h2 {
     padding-bottom: 20px; }
   .footer {
     text-align: center; }
+    .footer .menu {
+      justify-content: center; }
   .responsive-bottom-space {
     padding-bottom: 50px; }
-  .footer .info {
-    padding-top: 0px; }
   .stripe {
     padding: 0; }
   #header {
