--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -145,16 +145,24 @@ $header-styles: (
     'h3': ('font-size': 2.75em),
     'h4': ('font-size': 18),
     'h5': ('font-size': 17),
-    'h6': ('font-size': 16),
+    'h6': ('font-size': 16)
   ),
   medium: (
+    'h1': ('font-size': 48),
+    'h2': ('font-size': 5.75em),
+    'h3': ('font-size': 3.75em),
+    'h4': ('font-size': 1.75em),
+    'h5': ('font-size': 20),
+    'h6': ('font-size': 16)
+  ),
+  large: (
     'h1': ('font-size': 48),
     'h2': ('font-size': 6.75em),
     'h3': ('font-size': 4.75em),
     'h4': ('font-size': 1.75em),
     'h5': ('font-size': 20),
-    'h6': ('font-size': 16),
-  ),
+    'h6': ('font-size': 16)
+  )
 );
 $header-text-rendering: optimizeLegibility;
 $small-font-size: 80%;
